@@ -9,6 +9,8 @@ works exactly vs CableLabs copyrights. Im reasonably certain its aok.
 
 Minor changes for RT#73972
 
+Improvements to tests
+
 *** 0.67_1  Dec 16 2010
 
 Warning: the declaration of DHO_NIS_DOMAIN was overlapping for options
